--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="form-floating mb-2">
                 <textarea class="form-control" placeholder="Leave a comment here" id="message" style="height: 100px" required></textarea>
-                <label for="floatingTextarea2">Comments</label>
+                <label for="floatingTextarea2">Message</label>
             </div>
             <div class=" mb-2">
                 <input type="date" class="form-control" id="date" required  placeholder="Date">
